--- a/src/strings/DataverseResources.lt-LT.resx
+++ b/src/strings/DataverseResources.lt-LT.resx
@@ -12,10 +12,10 @@
     Example:
     
     ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <resheader name="DV_resmimetype">text/microsoft-resx</resheader>
+    <resheader name="DV_version">2.0</resheader>
+    <resheader name="DV_reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="DV_writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
     <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -198,6 +198,18 @@
   </data>
   <data name="FormulaColumns_VirtualTableNotSupported" xml:space="preserve">
     <value>Negalima nurodyti virtualiosios lentelės {0} formulės stulpeliuose.</value>
+    
+  </data>
+  <data name="FormulaColumns_TextNumberMissingFormat" xml:space="preserve">
+    <value>Kai funkcija Tekstas naudojama su skaičiais, į antrąjį argumentą įtraukite formatą. Formato eilutėje formulės stulpeliuose negali būti tūkstančių ar dešimtainio skyriklio.</value>
+    
+  </data>
+  <data name="FormulaColumns_ImplicitNumberToText" xml:space="preserve">
+    <value>Skaičiams į tekstą konvertuoti naudokite funkciją Tekstas. Į antrąjį argumentą įtraukite formatą, kurio formulės stulpeliuose nebūtų tūkstančių ar dešimtainio skyriklio.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedCurrency" xml:space="preserve">
+    <value>Skaičiavimai su valiutų stulpeliais susijusių lentelių formulės stulpeliuose šiuo metu nepalaikomi.</value>
     
   </data>
 </root>
