--- a/src/strings/DataverseResources.cs-CZ.resx
+++ b/src/strings/DataverseResources.cs-CZ.resx
@@ -12,10 +12,10 @@
     Example:
     
     ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <resheader name="DV_resmimetype">text/microsoft-resx</resheader>
+    <resheader name="DV_version">2.0</resheader>
+    <resheader name="DV_reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="DV_writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
     <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -153,7 +153,7 @@
     
   </data>
   <data name="FormulaColumns_InvalidTimeUnit" xml:space="preserve">
-    <value>Argument {0} je neplatná/nepodporovaná jednotka času pro aritmetickou funkci data {1}</value>
+    <value>Argument {0} je neplatná/nepodporovaná jednotka času pro aritmetickou funkci data {1}.</value>
     
   </data>
   <data name="FormulaColumns_NumericFormatNotSupported" xml:space="preserve">
@@ -198,6 +198,18 @@
   </data>
   <data name="FormulaColumns_VirtualTableNotSupported" xml:space="preserve">
     <value>Nelze odkazovat na virtuální tabulku {0} ve sloupcích vzorců.</value>
+    
+  </data>
+  <data name="FormulaColumns_TextNumberMissingFormat" xml:space="preserve">
+    <value>Při použití funkce Text s čísly zahrňte formát do druhého argumentu. Formátovací řetězec nesmí obsahovat oddělovač tisíců nebo desetinných míst ve sloupcích vzorců.</value>
+    
+  </data>
+  <data name="FormulaColumns_ImplicitNumberToText" xml:space="preserve">
+    <value>Pomocí funkce Text můžete převést čísla na text. Do druhého argumentu zahrňte formát, který nemůže ve sloupcích vzorců obsahovat oddělovač tisíců nebo desetinných míst.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedCurrency" xml:space="preserve">
+    <value>Výpočty se sloupci měny v souvisejících tabulkách nejsou aktuálně podporovány ve sloupcích vzorců.</value>
     
   </data>
 </root>
