--- a/src/strings/DataverseResources.es-ES.resx
+++ b/src/strings/DataverseResources.es-ES.resx
@@ -12,10 +12,10 @@
     Example:
     
     ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <resheader name="DV_resmimetype">text/microsoft-resx</resheader>
+    <resheader name="DV_version">2.0</resheader>
+    <resheader name="DV_reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="DV_writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
     <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -121,7 +121,7 @@
     
   </data>
   <data name="FormulaColumns_MathFunctionBadArity" xml:space="preserve">
-    <value>Número de argumentos no válidos para la función {0}: {1} recibidos, {2} esperados</value>
+    <value>Número no válido de argumentos para la función {0}: {1} recibidos, {2} esperados</value>
     
   </data>
   <data name="FormulaColumns_ArgNotSupported" xml:space="preserve">
@@ -157,7 +157,7 @@
     
   </data>
   <data name="FormulaColumns_NumericFormatNotSupported" xml:space="preserve">
-    <value>No se admite los tokens de formato específicos de la configuración regional, como "." y "," en las columnas de fórmula.</value>
+    <value>No se admiten tokens de formato específicos de la configuración regional, como "." y "," en las columnas de fórmula.</value>
     
   </data>
   <data name="FormulaColumns_FunctionNotSupported" xml:space="preserve">
@@ -165,7 +165,7 @@
     
   </data>
   <data name="FormulaColumns_OperationNotSupported" xml:space="preserve">
-    <value>Esta operación no se puede realizar en el tipo {0} en las columnas de fórmula.</value>
+    <value>No se puede realizar esta operación en el tipo {0} en las columnas de fórmula.</value>
     
   </data>
   <data name="FormulaColumns_ResultTypeNotSupported" xml:space="preserve">
@@ -197,7 +197,19 @@
     
   </data>
   <data name="FormulaColumns_VirtualTableNotSupported" xml:space="preserve">
-    <value>No se puede hacer referencia a la tabla virtual {0} en las columnas de fórmula.</value>
+    <value>No se puede hacer referencia a la tabla virtual {0} en columnas de fórmula.</value>
+    
+  </data>
+  <data name="FormulaColumns_TextNumberMissingFormat" xml:space="preserve">
+    <value>Incluir un formato en el segundo argumento cuando se usa la función Texto con números. La cadena de formato no puede incluir un separador decimal o de millares en las columnas de fórmula.</value>
+    
+  </data>
+  <data name="FormulaColumns_ImplicitNumberToText" xml:space="preserve">
+    <value>Use la función Texto para convertir números en texto. Incluya un formato en el segundo argumento, que no puede incluir un separador decimal o de millares en las columnas de fórmula.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedCurrency" xml:space="preserve">
+    <value>Actualmente no se admiten cálculos con columnas de moneda en tablas relacionadas en columnas de fórmula.</value>
     
   </data>
 </root>
