--- a/src/strings/DataverseResources.hu-HU.resx
+++ b/src/strings/DataverseResources.hu-HU.resx
@@ -12,10 +12,10 @@
     Example:
     
     ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <resheader name="DV_resmimetype">text/microsoft-resx</resheader>
+    <resheader name="DV_version">2.0</resheader>
+    <resheader name="DV_reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="DV_writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
     <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -198,6 +198,18 @@
   </data>
   <data name="FormulaColumns_VirtualTableNotSupported" xml:space="preserve">
     <value>Nem hivatkozhat virtuális táblára {0} képletoszlopokban.</value>
+    
+  </data>
+  <data name="FormulaColumns_TextNumberMissingFormat" xml:space="preserve">
+    <value>A Szöveg függvény számokkal együtt való használata esetén formátumot is tartalmazhat a második argumentumban. A formátumsztring nem tartalmazhat ezres elválasztót vagy tizedesvesszőt a képletoszlopokban.</value>
+    
+  </data>
+  <data name="FormulaColumns_ImplicitNumberToText" xml:space="preserve">
+    <value>A Szöveg függvény segítségével konvertálája a számokat szöveggé. Olyan formátumot emeljen be a második argumentumba, amely nem tartalmazhat ezres elválasztót vagy tizedesvesszőt a képletoszlopokban.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedCurrency" xml:space="preserve">
+    <value>A kapcsolódó táblák pénznemoszlopokkal kapcsolatos számításai jelenleg nem támogatottak a képletoszlopokban.</value>
     
   </data>
 </root>
