--- a/src/strings/DataverseResources.ja-JP.resx
+++ b/src/strings/DataverseResources.ja-JP.resx
@@ -12,10 +12,10 @@
     Example:
     
     ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <resheader name="DV_resmimetype">text/microsoft-resx</resheader>
+    <resheader name="DV_version">2.0</resheader>
+    <resheader name="DV_reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="DV_writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
     <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -129,11 +129,11 @@
     
   </data>
   <data name="FormulaColumns_ArgTypeNotSupported" xml:space="preserve">
-    <value>計算式列で、この引数をこの型で渡すことはできません。</value>
+    <value>計算式列では、この引数をこの型で渡すことはできせません。</value>
     
   </data>
   <data name="FormulaColumns_ArgumentTypeNotSupported" xml:space="preserve">
-    <value>数式列では、この引数を {0} 型として渡せません。</value>
+    <value>計算式列では、この引数を {0} 型で渡すことはできせません。</value>
     
   </data>
   <data name="FormulaColumns_LiteralArgRequired" xml:space="preserve">
@@ -165,7 +165,7 @@
     
   </data>
   <data name="FormulaColumns_OperationNotSupported" xml:space="preserve">
-    <value>数式列では、この操作を {0} 型で実行できません。</value>
+    <value>計算式列では、この操作を {0} 型で実行できません。</value>
     
   </data>
   <data name="FormulaColumns_ResultTypeNotSupported" xml:space="preserve">
@@ -173,7 +173,7 @@
     
   </data>
   <data name="FormulaColumns_RecordAccessNotSupported" xml:space="preserve">
-    <value>数式列はレコード全体の直接参照に対応していません。レコードが含む有効なフィールドを参照してください。</value>
+    <value>計算式列はレコード全体の直接参照に対応していません。レコードが含む有効なフィールドを参照してください。</value>
     
   </data>
   <data name="FormulaColumns_ResultTypeMustMatch" xml:space="preserve">
@@ -189,15 +189,27 @@
     
   </data>
   <data name="FormulaColumns_AggregateCoercionNotSupported" xml:space="preserve">
-    <value>数式列はレコードやテーブルの強制変換に対応していません。</value>
+    <value>計算式列はレコードやテーブルの強制変換に対応していません。</value>
     
   </data>
   <data name="FormulaColumns_SingleColumnTableNotSupported" xml:space="preserve">
-    <value>数式列は単一列テーブルに対応していません。</value>
+    <value>計算式列は単一列テーブルに対応していません。</value>
     
   </data>
   <data name="FormulaColumns_VirtualTableNotSupported" xml:space="preserve">
-    <value>数式列で仮想テーブル {0} を参照できません。</value>
+    <value>計算式列で仮想テーブル {0} を参照することはできません。</value>
+    
+  </data>
+  <data name="FormulaColumns_TextNumberMissingFormat" xml:space="preserve">
+    <value>テキスト関数に数値を使用する場合は、第 2 引数に書式設定を定義します。文字列の書式設定で、3 桁区切りや小数点を式の列に含めることはできません。</value>
+    
+  </data>
+  <data name="FormulaColumns_ImplicitNumberToText" xml:space="preserve">
+    <value>数値をテキストに変換するには Text 関数を使用します。書式を第 2 引数に定義しますが、3 桁区切りや小数点を式の列に含めることはできません。</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedCurrency" xml:space="preserve">
+    <value>関連するテーブルで通貨の列を計算することは、式の列では現在サポートされていません。</value>
     
   </data>
 </root>
