--- a/src/strings/DataverseResources.kk-KZ.resx
+++ b/src/strings/DataverseResources.kk-KZ.resx
@@ -12,10 +12,10 @@
     Example:
     
     ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <resheader name="DV_resmimetype">text/microsoft-resx</resheader>
+    <resheader name="DV_version">2.0</resheader>
+    <resheader name="DV_reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="DV_writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
     <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -198,6 +198,18 @@
   </data>
   <data name="FormulaColumns_VirtualTableNotSupported" xml:space="preserve">
     <value>Формула бағандарында {0} виртуалды кестесіне сілтеме жасау мүмкін емес.</value>
+    
+  </data>
+  <data name="FormulaColumns_TextNumberMissingFormat" xml:space="preserve">
+    <value>"Мәтін" функциясын сандармен бірге пайдаланғанда, екінші аргументке пішім енгізіңіз. Пішім жолы формула бағандарында мыңдаған немесе ондық бөлгішті қамтымауы керек.</value>
+    
+  </data>
+  <data name="FormulaColumns_ImplicitNumberToText" xml:space="preserve">
+    <value>Сандарды мәтінге түрлендіру үшін "Мәтін" функциясын пайдаланыңыз. Формула бағандарындағы мыңдаған немесе ондық бөлгішті қамтымайтын екінші аргументке пішім енгізіңіз.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedCurrency" xml:space="preserve">
+    <value>Қатысты кестелердегі валюта бағандарымен есептеуге қазір формула бағандарында қолдау көрсетілмейді.</value>
     
   </data>
 </root>
