--- a/src/strings/DataverseResources.sr-Latn-RS.resx
+++ b/src/strings/DataverseResources.sr-Latn-RS.resx
@@ -12,10 +12,10 @@
     Example:
     
     ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <resheader name="DV_resmimetype">text/microsoft-resx</resheader>
+    <resheader name="DV_version">2.0</resheader>
+    <resheader name="DV_reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="DV_writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
     <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -149,7 +149,7 @@
     
   </data>
   <data name="FormulaColumns_DateTimeFormatNotSupported" xml:space="preserve">
-    <value>U kolonama formula podržane su samo niske formata kratkog datuma i vremena.</value>
+    <value>U kolonama formula podržane su samo niske kratkog formata datuma i vremena.</value>
     
   </data>
   <data name="FormulaColumns_InvalidTimeUnit" xml:space="preserve">
@@ -189,7 +189,7 @@
     
   </data>
   <data name="FormulaColumns_AggregateCoercionNotSupported" xml:space="preserve">
-    <value>Prinuda zapisa ili tabela nije podržana u kolonama sa formulama.</value>
+    <value>Prinuda zapisa ili tabela nije podržana u kolonama formula.</value>
     
   </data>
   <data name="FormulaColumns_SingleColumnTableNotSupported" xml:space="preserve">
@@ -197,7 +197,19 @@
     
   </data>
   <data name="FormulaColumns_VirtualTableNotSupported" xml:space="preserve">
-    <value>Nije moguće postaviti virtuelnu tabelu {0} kao referencu u kolonama sa formulama.</value>
+    <value>Nije moguće postaviti virtuelnu tabelu {0} kao referencu u kolonama formula.</value>
+    
+  </data>
+  <data name="FormulaColumns_TextNumberMissingFormat" xml:space="preserve">
+    <value>Uključite format u drugi argument kada koristite funkciju „Tekst“ sa brojevima. Niska formata ne može da sadrži znak za razdvajanje hiljada ili decimala u kolonama formula.</value>
+    
+  </data>
+  <data name="FormulaColumns_ImplicitNumberToText" xml:space="preserve">
+    <value>Koristite funkciju „Tekst“ da biste konvertovali brojeve u tekst. Uključite format u drugi argument koji ne može da sadrži znak za razdvajanje hiljada ili decimala u kolonama formula.</value>
+    
+  </data>
+  <data name="FormulaColumns_RelatedCurrency" xml:space="preserve">
+    <value>Izračunavanja sa kolonama valuta u povezanim tabelama trenutno nisu podržana u kolonama formula.</value>
     
   </data>
 </root>
